Clear the activationLocks before deactivating the Stroke and Fill config widgets

When loading a file with a vector layer, the node manager will
activate and deactivate the default tool in the wrong order. This
cannot be worked around; and in fact, we get a LOT of activate
and deactivate calls because just creating the config widgets will
call those:

KoStrokeConfigWidget::KoStrokeConfigWidget DefaultToolTabbedWidget(0x562719ef0e00, name="default-tool-tabbed-widget")
KoFillConfigWidget::KoFillConfigWidget KoFillConfigWidget(0x562719f206a0)
KoFillConfigWidget::deactivate() KoFillConfigWidget(0x562719f206a0, name="KoFillConfigWidget")  locks: 0
KoFillConfigWidget::activate() KoFillConfigWidget(0x562719f206a0, name="KoFillConfigWidget") 2
KoStrokeConfigWidget::deActivate(): locks 0
KoFillConfigWidget::deactivate() KoFillConfigWidget(0x562719f206a0, name="KoFillConfigWidget")  locks: 0
KoFillConfigWidget::KoFillConfigWidget KoFillConfigWidget(0x56271a039190)
KoFillConfigWidget::deactivate() KoFillConfigWidget(0x56271a039190, name="KoFillConfigWidget")  locks: 0
KoFillConfigWidget::activate() KoFillConfigWidget(0x56271a039190, name="KoFillConfigWidget") 2
KoStrokeConfigWidget::activate(): locks 2
KoFillConfigWidget::activate() KoFillConfigWidget(0x562719f206a0, name="KoFillConfigWidget") 2
KoFillConfigWidget::deactivate() KoFillConfigWidget(0x56271a039190, name="KoFillConfigWidget")  locks: 0
KoStrokeConfigWidget::deActivate(): locks 0
KoFillConfigWidget::deactivate() KoFillConfigWidget(0x562719f206a0, name="KoFillConfigWidget")  locks: 0
KoFillConfigWidget::deactivate() KoFillConfigWidget(0x56271a039190, name="KoFillConfigWidget")  locks: 2
SAFE ASSERT (krita): "d->deactivationLocks.empty()" in file /home/boud/dev/krita/libs/ui/widgets/KoFillConfigWidget.cpp, line 358
KoStrokeConfigWidget::deActivate(): locks 2
SAFE ASSERT (krita): "d->deactivationLocks.empty()" in file /home/boud/dev/krita/libs/ui/widgets/KoStrokeConfigWidget.cpp, line 481

BUG:416000